@@ -37,7 +37,7 @@ export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0, cross3d,
       covEllipses,
       colDevs,
       logdetCI,
-    	bartlettTests
+    	bartlettTests, leveneTests
   	)
 
 S3method(heplot, mlm)
